--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "PORT=3002 next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "PORT=3002 next start",
     "lint": "eslint",
     "lint:fix": "eslint --fix"
   },
@@ -15,12 +15,15 @@
   "license": "ISC",
   "packageManager": "pnpm@10.5.2",
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@mapbox/search-js-react": "^1.5.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.1",
     "next": "^16.1.4",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-hook-form": "^7.71.1"
+    "react-hook-form": "^7.71.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
