--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@mapbox/search-js-core": "^1.5.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "25.0.10",
     "@types/react": "19.2.9",
